6. Grabber [#289477 #445448]