@@ -6,6 +6,7 @@ import org.jsoup.nodes.Document;
 import org.jsoup.nodes.Element;
 import org.jsoup.select.Elements;
 import ru.job4j.grabber.utils.DateTimeParser;
+
 import java.io.IOException;
 import java.util.ArrayList;
 import java.util.List;
@@ -14,53 +15,41 @@ public class HabrCareerParse implements Parse {
 
     private static final String SOURCE_LINK = "https://career.habr.com";
 
-    private static final String PAGE_LINK = String.format("%s/vacancies/java_developer", SOURCE_LINK);
-
     private final DateTimeParser dateTimeParser;
-
-    private static final int PAGECOUNT = 6;
 
     public HabrCareerParse(DateTimeParser dateTimeParser) {
         this.dateTimeParser = dateTimeParser;
     }
 
     private static String retrieveDescription(String link) throws IOException {
-        Connection connection = Jsoup.connect(link);
-        Document document = connection.get();
-        Elements element = document.select(".vacancy-description__text");
-        return element.text();
-    }
-
-    public  List<Post> createPost() throws IOException {
-        List<Post> postList = new ArrayList<>();
-        for (int i = 1; i < PAGECOUNT; i++) {
-            postList.addAll(list(String.format("%s?page=%s", PAGE_LINK, i)));
-        }
-        return postList;
+        Document doc = Jsoup.connect(link).get();
+        return doc.select(".vacancy-description__text").first().text();
     }
 
     @Override
     public List<Post> list(String link) throws IOException {
-        List<Post> list = new ArrayList<>();
-        Connection connection = Jsoup.connect(link);
-        Document document = connection.get();
-        Elements rows = document.select(".vacancy-card__inner");
-        rows.forEach(row -> {
-            Element titleElement = row.select(".vacancy-card__title").first();
-            Element linkElement = titleElement.child(0);
-            String vacancyName = titleElement.text();
-            String vacancyDate = row.select(".vacancy-card__date time").first().attr("datetime");
-            String newLink = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
-            String description;
-            try {
-                description = retrieveDescription(link);
-            } catch (IOException e) {
-                throw new RuntimeException(e);
-            }
-            Post post = new Post(vacancyName, newLink, description, dateTimeParser.parse(vacancyDate));
-            list.add(post);
-        });
+        List<Post> posts = new ArrayList<>();
+        for (int i = 1; i <= 5; i++) {
+            Connection connection = Jsoup.connect("%s%s".formatted(link, i));
+            Document document = connection.get();
+            Elements rows = document.select(".vacancy-card__inner");
+            rows.forEach(row -> {
+                try {
+                    posts.add(createPost(row));
+                } catch (IOException e) {
+                    e.printStackTrace();
+                }
+            });
+        }
+        return posts;
+    }
 
-        return list;
+    private Post createPost(Element row) throws IOException {
+        Element titleElement = row.select(".vacancy-card__title").first();
+        Element linkElement = titleElement.child(0);
+        String vacancyName = titleElement.text();
+        String date = row.selectFirst(".vacancy-card__date").child(0).attr("datetime");
+        String vacancyLink = String.format("%s%s", SOURCE_LINK, linkElement.attr("href"));
+        return new Post(vacancyName, vacancyLink, retrieveDescription(vacancyLink), dateTimeParser.parse(date));
     }
 }
